--- a/index.html
+++ b/index.html
@@ -12,11 +12,19 @@
 		
 		<link media="screen" rel="stylesheet" type="text/css" href="assets/css/main.css" />
 		
-		<!-- SUPERSIZED -->
+		<!-- SUPERSIZED -->	
 		<link rel="stylesheet" href="assets/css/supersized.min.css" type="text/css" media="screen" />
 		<link rel="stylesheet" href="assets/theme/supersized.shutter.css" type="text/css" media="screen" />
-						
-		<script src="assets/js/modernizr.custom.js"></script>								
+				
+		<!-- MODERNIZR -->							
+		<script src="assets/js/modernizr.custom.js"></script>
+
+		<!-- TRACEUR -->							
+		<script data-require="traceur@*" data-semver="0.0.0-20140302" src="https://traceur-compiler.google.code/git/bin/traceur.js"></script>
+		<script>
+			traceur.options.experimental = true;
+		</script>	
+		<script data-require="traceur@*" data-semver="0.0.0-20140302" src="https://traceur-compiler.google.code/git/src/bootstrap.js"></script>							
 	</head>
 	<body>
 		<div class="container">
@@ -375,4 +383,8 @@
 		  })(); 
 	  </script>
 	</body>
+	<script type="module">
+		let add = (x,y) => x+y;
+		console.log(add(5,3));
+	</script>
 </html>
