scroll-x safari checked, todo fix scroll-y

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta name="author" content="Enjoy-Mondays" />
 		<link rel="shortcut icon" href="favicon.ico"> 
 		
+		<!-- MAIN CSS-->
 		<link media="screen" rel="stylesheet" type="text/css" href="assets/css/main.css" />
 		
 		<!-- SUPERSIZED -->
@@ -43,7 +44,7 @@
 		</div>
 
 		<div class="container clearfix">	
-			<!-- --------------------------------------------------- SECTION HOME -->
+			<!--  SECTION HOME -->
 			<section id="home" class="home page clearfix responsive_headline">
 				<header>					
 					<div>
@@ -61,7 +62,7 @@
 					</div>					
 				</header>									
 			</section>
-			<!-- --------------------------------------------------- SECTION WORK -->
+			<!--  SECTION WORK -->
 			<section id="work" class="work page clearfix responsive_headline">
 				<header>
 					<div>
@@ -80,7 +81,7 @@
 															
 				</div>				
 			</section>
-			<!-- --------------------------------------------------- SECTION ABOUT -->
+			<!--  SECTION ABOUT -->
 			<section id="about" class="about page clearfix responsive_headline">
 				<header>
 					<div>
@@ -113,7 +114,7 @@
 					</article>
 				</div>				
 			</section>	
-			<!-- --------------------------------------------------- SECTION CONTACT -->
+			<!--  SECTION CONTACT -->
 			<section id="contact" class="contact page clearfix responsive_headline-2">
 				<header>
 					<h1 class="s-header-one">say hello</h1>
@@ -147,8 +148,8 @@
 			</footer>				
 		</div><!-- end SECCIONS-->	
 		
-		<!-- --------------------------------------------------- SUPERSIZED -->	
-		<!-- --------------------------------------------------- PROJECT NAVIGATION -->	
+		<!--  SUPERSIZED -->	
+		<!--  PROJECT NAVIGATION -->	
 		<div id="closeGallery">
 			<a href="#">Close</a>
 		</div>
@@ -208,13 +209,15 @@
 				</div>
 			</div>
 		</div> 
-		<!-- ------------------------------------------------END PROJECT NAVIGATION -->
+		<!-- END PROJECT NAVIGATION -->
 		
 		<script type="text/javascript" src="assets/js/jquery-1.10.2.min.js"></script>
 		<script type="text/javascript" src="assets/js/jquery.easing.min.js"></script>					
 		<script type="text/javascript" src="assets/js/toucheffects.js"></script>
 		<script type="text/javascript" src="assets/js/waypoints.min.js"></script>
-		<script type="text/javascript" src="assets/js/main.js"></script>		
+		
+		<!-- MAIN JS -->		
+		<script type="text/javascript" src="assets/js/main.js"></script>
 
 		<!-- FIT TEXT -->	
 		<script src="assets/js/jquery.fittext.js"></script>
@@ -228,7 +231,7 @@
 		<script type="text/javascript" src="assets/theme/supersized.shutter.js"></script>
 		
 		<script type="text/javascript">
-		$(document).ready(function () {
+		$(document).ready(function () { console.log('in supersized options');
 				///////////
 				var slides = [];
 				var projects = [
