mac scrolling bugs fixed,check now in other browsers

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 		<script type="text/javascript" src="assets/theme/supersized.shutter.js"></script>
 		
 		<script type="text/javascript">
-		$(document).ready(function () { console.log('in supersized options');
+		$(document).ready(function () { 
 				///////////
 				var slides = [];
 				var projects = [
