--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
 				</section>	
 
 				<footer class="clearfix">
+					<div id="bg"></div>
 					<p>2013©EnjoyMondays | Powered by <a href="https://github.com/goliatone/flatg-website" target="_blank"> FlatG</a></p>
 					<ul id="social">
 						<li id="github"><a href="http://github.com/goliatone" target="_blank">
@@ -156,59 +157,7 @@
 		</div><!-- end front pages -->
 
 		<!-- slideshow for works -->	
-		<div id="slideshow">
-			<!--  SUPERSIZED -->	
-			<!--  PROJECT NAVIGATION -->	
-			<div id="closeGallery">
-				<a href="#">Close</a>
-			</div>
-		
-			<!--Thumbnail Navigation-->
-			<div id="prevthumb"></div>
-			<div id="nextthumb"></div>
-
-			<!--Arrow Navigation-->
-			<a id="prevslideb" class="load-item"></a>
-			<a id="nextslideb" class="load-item"></a>
-		
-			<div id="controls-holder">
-				<div id="thumb-tray" class="load-item">
-					<div id="thumb-back"></div>
-					<div id="thumb-forward"></div>
-				</div>
-
-				<!--Time Bar-->
-				<div id="progress-back" class="load-item">
-					<div id="progress-bar"></div>
-				</div>
-
-				<!--Control Bar-->
-				<div id="controls-wrapper" class="load-item">
-					<div id="controls">
-						<a id="play-button">
-							<img id="pauseplay" src="assets/images/pause.png"/>
-						</a>
-
-						<!--Slide counter-->
-						<div id="slidecounter">
-							<span class="slidenumber"></span> / <span class="totalslides"></span>
-						</div>
-
-						<!--Slide captions displayed here-->
-						<div id="slidecaption"></div>
-
-						<!--Thumb Tray button-->
-						<a id="tray-button">
-							<img id="tray-arrow" src="assets/images/button-tray-up.png"/>
-						</a>
-
-						<!--Navigation-->
-						<ul id="slide-list"></ul>
-					</div>
-				</div>
-			</div> 
-			<!-- END PROJECT NAVIGATION -->
-		</div>
+		<div id="slideshow"></div>
 
 		<!-- JQUERY -->
 		<script type="text/javascript" src="assets/js/jquery-1.10.2.min.js"></script>
