--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 					
 					//attach project preview and description:
 					if( project.e != true) {						
-							link = '<li><a href="#"><img src="assets/projects/'+project.p+'/preview/preview.jpg" alt="'+project.t+'" rel="'+pi+'"/><div class="he-second"><h3>'+project.t+'</h3><p>'+project.d+'</p><span class=".he-link">view project</span></div></a></li>';
+							link = '<li class="thumb"><a href="#"><img src="assets/projects/'+project.p+'/preview/preview.jpg" alt="'+project.t+'" rel="'+pi+'"/><div class="he-second"><h3>'+project.t+'</h3><p>'+project.d+'</p><span class=".he-link">view project</span></div></a></li>';
 						$('#emb_container ul.emb_gallery').append(link);						
 					}
 											
