checking js for responsive

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 		
 		<!-- MAIN CSS-->
 		<link media="screen" rel="stylesheet" type="text/css" href="assets/css/main.css" />
+
+		<!-- RESPONSIVE CSS-->
+		<link media="screen" rel="stylesheet" type="text/css" href="assets/css/responsive.css" />
 		
 		<!-- SUPERSIZED -->
 		<link rel="stylesheet" href="assets/css/supersized.min.css" type="text/css" media="screen" />
