--- a/index.html
+++ b/index.html
@@ -177,7 +177,9 @@
 
 		<!-- JQUERY -->
 		<script type="text/javascript" src="assets/js/jquery-1.10.2.min.js"></script>
-		<script type="text/javascript" src="assets/js/jquery.easing.min.js"></script>					
+		<script type="text/javascript" src="assets/js/jquery.easing.min.js"></script>
+		<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+							
 		<script type="text/javascript" src="assets/js/toucheffects.js"></script>
 
 		<!-- WAYPOINTS -->
