--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				<!--  SECTION HOME -->
 				<section id="home" class="home page clearfix">
 					<header>					
-						<div>
+						<div class="wrapper">
 							<h1>
 								<span class="s-header-one">
 									<img id="smile" src="assets/images/smile.png" alt="we code you smile" title="smile" />
@@ -125,6 +125,7 @@
 				<!--  SECTION CONTACT -->
 				<section id="contact" class="contact page clearfix responsive_headline-2">
 					<header>
+						<div class="wrapper">
 						<h1 class="s-header-one">say hello</h1>
 						<h1 class="s-header-two">hola@enjoy-mondays.com</h1>									
 						<div class="sub-header">
@@ -132,6 +133,7 @@
 							<p>Our vision is simple. We want to create websites and applications with both high quality design and easy-to-access
 								content. The finished product will be totally unique and represent awesomeness.</p>
 						</div>	
+						</div>
 					</header>						
 				</section>	
 
@@ -179,7 +181,7 @@
 		<script type="text/javascript" src="assets/js/jquery-1.10.2.min.js"></script>
 		<script type="text/javascript" src="assets/js/jquery.easing.min.js"></script>
 		<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-							
+
 		<script type="text/javascript" src="assets/js/toucheffects.js"></script>
 
 		<!-- WAYPOINTS -->
