checking landscape for mobile

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 		<!-- front pages -->
 		<div id="pages">
 			<!-- header -->
-			<div class="container">
+			<div id="main-header" class="container">
+				<!-- header can be fix or landscape, by default fixed -->
 				<header class="fixed header-nav">
 					<!-- logo -->
 					<div class="logo">
@@ -48,7 +49,7 @@
 				</header>			
 			</div>	
 
-			<div class="fixed-ghost"></div>
+			<div class="fixed-fixed"></div>
 
 			<!-- sections x pages + footer -->
 			<div class="container clearfix">	
