--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 		<script src="assets/js/modernizr.custom.js"></script>								
 	</head>
 	<body>
+		<div id="firstLoad" class="hidden">true</div>
 		<!-- web displays either #front-page either works #slideshow (fullwidth) -->
 		<!-- #front-page (header + pages + footer) -->
 		<div id="front-page">
