general srcript cleanup, waypoint plugin added again, finish implementing

--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
 		<script type="text/javascript" src="assets/js/toucheffects.js"></script>
 
 		<!-- WAYPOINTS -->
-		<script type="text/javascript" src="assets/js/waypoints.min.js"></script>
+		<!-- script type="text/javascript" src="assets/js/waypoints.min.js"></script -->
+		<script type="text/javascript" src="assets/js/jquery.waypoints.js"></script>
 		
 		<!-- MAIN -->		
 		 <script type="text/javascript" src="assets/js/main.js"></script>  
