--- a/index.html
+++ b/index.html
@@ -339,7 +339,8 @@
 		<!-- GOOGLE FONTS -->
 		<script type="text/javascript">
 			WebFontConfig = {
-		    	google: { families: [ 'Lato:400,100,700,900:latin' ] }
+		    	google: { families: [ 'Lato:400,100,700,900:latin',
+		    						   'Dosis: 600' ] }
 		  	};
 		  	(function() {
 		    	var wf = document.createElement('script');
