--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
       <!-- LOGO -->
       <div id="logo" class="big left fullheight">
-        <a href="#">
+        <a href="#" class="img-wrapper">
           <img src="assets/images/logo.png" alt="Enjoy-Mondays" title="Home" />
           <span class="screen-reader-text">Enjoy Mondays</span>
         </a>
@@ -49,7 +49,7 @@
         <li><a href="#notes">Notes</a></li>
       </ul>	
 
-      <div id="collapsed-menu" class="hidden right centered">
+      <div id="collapsed-menu" class="hidden right">
       	<img src="assets/images/menu.png" >
       </div>
     </header>
@@ -364,7 +364,7 @@
         var wf = document.createElement('script');
         wf.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
         wf.type = 'text/javascript';
-        wf.async = 'true';
+        //wf.async = 'true';
         var s = document.getElementsByTagName('script')[0];
         s.parentNode.insertBefore(wf, s);
       })(); 
