css for <480px width. test

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <header id="main-header" class="wrapper top fixed fullwidth light_gray_bg">
 
       <!-- LOGO -->
-      <div id="logo" class="big left fullheight">
+      <div id="logo" class="big left">
         <a href="#" class="img-wrapper">
           <img src="assets/images/logo.png" alt="Enjoy-Mondays" title="Home" />
           <span class="screen-reader-text">Enjoy Mondays</span>
