header animations for <480px

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <header class="right centered clearfix responsive_headline">
           <h1 class="clearfix">
             <span class="s-header-one dark_gray_color right">say hello</span>
-            <span class="s-header-two right">hola@enjoy-mondays.com</span>
+            <span class="s-header-two right">hola@<wbr>enjoy-mondays.<wbr>com</span>
           </h1>
           <div class="sub-header right">
             <hr class="light_fuxsia_bg header_hr">
