mod works grid hover effects

--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
           </div>
         </header>
 
-        <div id="portfolio" class="tiles content clearfix">
+        <div id="portfolio" class="content clearfix">
           <div id="emb_container">
-            <ul class="emb_gallery"></ul>
+            <ul class="emb_gallery tiles left-right"></ul>
           </div>
         </div>
 
