--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
 
       <!-- HOME PAGE -->
       <section id="home" class="page fillheight wrapper bg-1 color-2 clearfix">
-        <header class="right centered clearfix fittextjs">	  <h1 class="">
+        <header class="right centered clearfix fittextjs">	  
+          <h1>
             <span class="s-header-one right ">
               <img id="smile" src="assets/images/smile.png" alt="we code you smile" title="smile" />
               We code</span>
@@ -195,7 +196,7 @@
   <!-- JQUERY -->
   <script type="text/javascript" src="assets/js/jquery-1.10.2.min.js"></script>
   <script type="text/javascript" src="assets/js/jquery.easing.min.js"></script>
-  <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+  <script type="text/javascript" src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
   <script type="text/javascript" src="assets/js/toucheffects.js"></script>
   <!-- WAYPOINTS http://imakewebthings.com/waypoints/ -->
   <!-- script type="text/javascript" src="assets/js/waypoints.min.js"></script -->
