WIP home and work headers done.

--- a/index.html
+++ b/index.html
@@ -46,31 +46,25 @@
 
     <div id="content"> 
 
-      <section id="home" class="section bg-1 color-2">
+      <section id="home" class="home section">
         <div class="container">
-          <header class="right clearfix fittextjs">    
-            <h1>
-              <span class="s-header-one right ">
-                <img id="smile" src="assets/images/smile.png" alt="we code you smile" title="smile" />
-                We code</span>
-              <span class="s-header-two right ">you smile</span>  
-            </h1>       
-            <div class="sub-header right ">
-              <hr class="bg-2 header_hr">
+          <header class="fittextjs header">    
+            <h1>We code you smile</h1>       
+            <div class="sub-header ">
+              <hr>
               <p>Crafting clean and fresh awesomnes for the web and beyond.</p>
               <p>We make it funky. Want to work with us?</p>
             </div>
           </header>
-          <div class="clearfix"></div> 
         </div>                 
       </section>
 
-      <section id="work" class="section bg-2 color-1 ">
+      <section id="work" class="work section">
         <div class="container">
-          <header class="right fittextjs">
+          <header class="fittextjs header">
             <h1>Works</h1>          
             <div class="sub-header">
-              <hr class="bg-4 header_hr">
+              <hr class="header_hr">
               <p>Some of our latest works.</p>
             </div>
           </header>
@@ -83,13 +77,14 @@
         </div>
       </section>
 
-      <section id="about" class="section bg-3 color-1">
+      <section id="about" class="about section">
         <div class="container">
-          <header class="right fittextjs">
+          <header class="fittextjs header">
             <h1>Services</h1>
             <div class="sub-header">
-              <hr class="bg-4 header_hr">
-              <p>Our vision is simple. We want to create websites and applications <br /> with both high quality design and easy-to-access content. The <br />finished product will be totally unique and represent <br />awesomeness.</p>
+              <hr class="header_hr">
+              <p>Our vision is simple. We want to create websites and applications with both high quality design and easy-to-access content.</p>
+              <p>The finished product will be totally unique and represent awesomeness.</p>
             </div>
           </header>
 
@@ -113,7 +108,7 @@
         </div>
       </section>
           
-      <section id="contact" class="section last bg-4 color-1">
+      <section id="contact" class="contact section last">
         <div class="container">
           <header class="right centered clearfix fittextjs">
             <h1 class="clearfix">
@@ -121,7 +116,7 @@
               <span class="s-header-two right">hola@<wbr>enjoy-mondays.<wbr>com</span>
             </h1>
             <div class="sub-header right">
-              <hr class="bg-5 header_hr">
+              <hr class="header_hr">
               <p>Our vision is simple. We want to create websites and applications with both high quality design and easy-to-access content. The finished product will be totally unique and represent awesomeness.</p>
             </div>     
           </header>
@@ -132,11 +127,11 @@
 
     <footer class="bg-2 color-1">
       <div class="container">
-        <div class="left">
+        <div class="left vCentered">
           <p>2013©EnjoyMondays | Powered by <a href="https://github.com/goliatone/flatg-website" target="_blank" class="color-4"> FlatG</a></p>
         </div>
         
-        <div class="right">
+        <div class="right vCentered">
           <ul id="social">
             <li id="github">
               <a href="http://github.com/goliatone" target="_blank">
