--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </ul> 
 
       <div id="collapsed-menu" class="hidden right">
-        <img src="assets/images/menu.png" >
+        <img src="assets/images/menu.png">
       </div>
     </header>
 
@@ -89,17 +89,17 @@
 
           <div class="content tiles three">
             <div class="tile">
-              <div class="img-wrapper"><img src="assets/images/understand.png" title="Understand" alt="Understand" /></div>
+              <div class="img-wrapper"><img src="assets/images/understand.png" title="Understand" alt="Understand"></div>
               <hr>
               <p>Understand the business and competitive landscape. Learn how people interact with the brand and product. Identify strategic opportunities and design goals.</p>
             </div>
             <div class="tile">
-              <div class="img-wrapper"><img src="assets/images/create.png" title="Create" alt="Create" /></div>
+              <div class="img-wrapper"><img src="assets/images/create.png" title="Create" alt="Create"></div>
               <hr>
               <p>Create the best production on the planet. Combine smart interaction, interface, and visual design into a compelling product that resonates with the target audience.</p>
             </div>
             <div class="tile">
-              <div class="img-wrapper"><img src="assets/images/test.png" title="Test" alt="Test" /></div>
+              <div class="img-wrapper"><img src="assets/images/test.png" title="Test" alt="Test"></div>
               <hr>
               <p>Test concepts, designs, and prototypes with real users. Combine learnings with gut instinct and experience. Iterate, refine, and relentlessly hone in in the persuit of perfection.</p>
             </div>
@@ -131,23 +131,23 @@
         <ul id="social">
           <li id="github">
             <a href="http://github.com/goliatone" target="_blank">
-              <img src="assets/images/github.png" title="GitHub" alt="GitHub" /></a>
+              <img src="assets/images/github.png" title="GitHub" alt="GitHub"></a>
           </li>
           <li id="facebook">
             <a href="https://www.facebook.com/EnjoyMondays" target="_blank">
-              <img src="assets/images/facebook.png" title="Facebook" alt="Facebook" /></a>
+              <img src="assets/images/facebook.png" title="Facebook" alt="Facebook"></a>
           </li>
           <li id="twitter">
             <a href="http://twitter.com/EnjoyMondays" target="_blank">
-              <img src="assets/images/twitter.png" title="Twitter" alt="Twitter" /></a>
+              <img src="assets/images/twitter.png" title="Twitter" alt="Twitter"></a>
           </li>
           <li id="google">
             <a href="#">
-              <img src="assets/images/google+.png" title="Google+" alt="Google+" /></a>
+              <img src="assets/images/google+.png" title="Google+" alt="Google+"></a>
           </li>
           <li id="pinterest">
             <a href="http://www.pinterest.com/enjoyMondays/" target="_blank">
-              <img src="assets/images/pinterest.png" title="Pinterest" alt="Pinterest" /></a>
+              <img src="assets/images/pinterest.png" title="Pinterest" alt="Pinterest"></a>
           </li>
         </ul>
       </div>
