Mod header imgs markup. Logo and menu collpased.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header id="main-header" class="container">
       <div id="logo" class="left">
         <a href="#" class="img-wrapper">
-          <img src="assets/images/logo.png" alt="Enjoy-Mondays" title="Home" />
+          <img src="assets/images/logo.png" alt="Enjoy-Mondays Logo" title="Home section">
           <span class="screen-reader-text">Enjoy Mondays</span>
         </a>
       </div>
@@ -38,7 +38,7 @@
       </ul> 
 
       <div id="collapsed-menu" class="hidden right">
-        <img src="assets/images/menu.png">
+        <a href="#"><span class="screen-reader-text">Open menu</span></a>
       </div>
     </header>
 
