Update sass structure.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <div id="content"> 
 
-      <section id="home" class="home section">
+      <section id="home" class="home section section-1">
         <div class="container">
           <header class="fittextjs header">    
             <h1>We code</h1>
@@ -58,7 +58,7 @@
         </div>                 
       </section>
 
-      <section id="work" class="work section">
+      <section id="work" class="work section section-2">
         <div class="container">
           <header class="fittextjs header">
             <h1>Works</h1>          
@@ -76,7 +76,7 @@
         </div>
       </section>
 
-      <section id="about" class="about section">
+      <section id="about" class="about section section-3">
         <div class="container">
           <header class="fittextjs header">
             <h1>Services</h1>
@@ -107,7 +107,7 @@
         </div>
       </section>
           
-      <section id="contact" class="contact section last">
+      <section id="contact" class="contact section section-4 last">
         <div class="container">
           <header class="fittextjs header">
             <h1>Say hello</h1>
