--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <div id="content"> 
 
-      <section id="home" class="home section section-1">
+      <section id="home" class="home section">
         <div class="container">
           <header class="fittextjs header">    
             <h1>We code</h1>
