Header txts width for iphone 6

--- a/index.html
+++ b/index.html
@@ -46,9 +46,11 @@
 
       <section id="home" class="home section">
         <div class="container">
-          <header class="fittextjs header">    
-            <h1>We code</h1>
-            <h1>You smile</h1>       
+          <header class="fittextjs header">
+            <div>  
+              <h1>We code</h1>
+              <h1>You smile</h1> 
+            </div>     
             <div class="sub-header ">
               <hr>
               <p>Crafting clean and fresh awesomnes for the web and beyond.</p>
@@ -61,7 +63,7 @@
       <section id="work" class="work section section-2">
         <div class="container">
           <header class="fittextjs header">
-            <h1>Works</h1>          
+            <div><h1>Works</h1></div>          
             <div class="sub-header">
               <hr class="header_hr">
               <p>Some of our latest works.</p>
@@ -79,7 +81,7 @@
       <section id="about" class="about section section-3">
         <div class="container">
           <header class="fittextjs header">
-            <h1>Services</h1>
+            <div><h1>Services</h1></div>
             <div class="sub-header">
               <hr class="header_hr">
               <p>Our vision is simple. We want to create websites and applications with both high quality design and easy-to-access content.</p>
@@ -110,8 +112,10 @@
       <section id="contact" class="contact section section-4 last">
         <div class="container">
           <header class="fittextjs header">
-            <h1>Say hello</h1>
-            <h1><a href="mailto:hola@enjoy-mondays.com">hola@enjoy-mondays.com</a></h1>
+            <div>
+              <h1>Say hello</h1>
+              <h1><a href="mailto:hola@enjoy-mondays.com">hola@enjoy-mondays.com</a></h1>
+            </div>
             <div class="sub-header">
               <hr>
               <p>Our vision is simple. We want to create websites and applications with both high quality design and easy-to-access content.</p>
