--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
     </header>
 
-    <div id="content"> 
+    <div id="sections"> 
 
       <section id="home" class="home section">
         <div class="container">
