Update sass and js for navigation transitions.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
 <body>
-  <div id="site" class="big-header">
+  <div id="site" class="state1">
     <header id="main-header" class="container">
       <div id="logo" class="left">
         <a href="#" class="img-wrapper">
@@ -37,7 +37,7 @@
         <li><a href="#notes">Notes</a></li>
       </ul> 
 
-      <div id="collapsed-menu" class="hidden right">
+      <div id="collapsed-menu" class="right">
         <a href="#"><span class="screen-reader-text">Open menu</span></a>
       </div>
     </header>
