--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>                 
       </section>
 
-      <section id="work" class="work section section-2">
+      <section id="work" class="work section">
         <div class="container">
           <header class="fittextjs header">
             <div><h1>Works</h1></div>          
@@ -78,7 +78,7 @@
         </div>
       </section>
 
-      <section id="about" class="about section section-3">
+      <section id="about" class="about section">
         <div class="container">
           <header class="fittextjs header">
             <div><h1>Services</h1></div>
@@ -109,7 +109,7 @@
         </div>
       </section>
           
-      <section id="contact" class="contact section section-4 last">
+      <section id="contact" class="contact section last">
         <div class="container">
           <header class="fittextjs header">
             <div>
