--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
 <body>
   <div id="site" class="state1">
-    <header id="main-header" class="container">
+    <div id="main-header">
+    <header class="container">
       <div id="logo" class="left">
         <a href="#" class="img-wrapper">
           <img src="assets/images/logo.png" alt="Enjoy-Mondays Logo" title="Home section">
@@ -41,6 +42,7 @@
         <a href="#"><span class="screen-reader-text">Open menu</span></a>
       </div>
     </header>
+    </div>
 
     <div id="sections"> 
 
@@ -126,6 +128,7 @@
       </section>
     </div>
 
+    <div class="footer">
     <footer class="container">
       <div class="site-info">
         <p>2013©EnjoyMondays | Powered by <a href="https://github.com/goliatone/flatg-website" target="_blank" class="color-4"> FlatG</a></p>
@@ -156,6 +159,7 @@
         </ul>
       </div>
     </footer>
+    </div>
   </div>
 
   <div id="slideshow">
