updating local/remote.

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
   <meta name="author" content="Enjoy-Mondays" />
   <link rel="shortcut icon" href="favicon.ico"> 
     
-  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="assets/css/style.css">
     
-  <link rel="stylesheet" href="assets/css/supersized.min.css" />
-  <link rel="stylesheet" href="assets/theme/supersized.shutter.css" />
+  <link rel="stylesheet" href="assets/css/supersized.min.css">
+  <link rel="stylesheet" href="assets/theme/supersized.shutter.css">
   
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Dosis: 600|Lato:400,100,700,900:latin">
+
 </head>
 
 
