--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
       <section id="home" class="home section">
         <div class="container">
-          <header class="fittextjs header">
-            <div>  
+          <header class="header">
+            <div class="fittextjs">  
               <h1>We code</h1>
               <h1>You smile</h1> 
             </div>     
@@ -65,8 +65,8 @@
 
       <section id="work" class="work section">
         <div class="container">
-          <header class="fittextjs header">
-            <div><h1>Works</h1></div>          
+          <header class="header">
+            <div class="fittextjs"><h1>Works</h1></div>          
             <div class="sub-header">
               <hr class="header_hr">
               <p>Some of our latest works.</p>
@@ -83,8 +83,8 @@
 
       <section id="about" class="about section">
         <div class="container">
-          <header class="fittextjs header">
-            <div><h1>Services</h1></div>
+          <header class="header">
+            <div class="fittextjs"><h1>Services</h1></div>
             <div class="sub-header">
               <hr class="header_hr">
               <p>Our vision is simple. We want to create websites and applications with both high quality design and easy-to-access content.</p>
@@ -114,8 +114,8 @@
           
       <section id="contact" class="contact section last">
         <div class="container">
-          <header class="fittextjs header">
-            <div>
+          <header class="header">
+            <div class="fittextjs">
               <h1>Say hello</h1>
               <h1><a href="mailto:hola@enjoy-mondays.com">hola@enjoy-mondays.com</a></h1>
             </div>
