WIP landscape + fittext sizing.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="assets/css/supersized.min.css">
   <link rel="stylesheet" href="assets/theme/supersized.shutter.css">
   
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Dosis: 600|Lato:400,100,700,900:latin">
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Dosis: 600|Lato:100,400,700,900:latin">
 
 </head>
 
@@ -115,10 +115,8 @@
       <section id="contact" class="contact section last">
         <div class="container">
           <header class="header">
-            <div class="fittextjs">
-              <h1>Say hello</h1>
-              <h1><a href="mailto:hola@enjoy-mondays.com">hola@enjoy-mondays.com</a></h1>
-            </div>
+            <div class="fittextjs hello"><h1>Say hello</h1></div>
+            <div class="fittextjs mail"><h1><a href="mailto:hola@enjoy-mondays.com">hola@enjoy-mondays.com</a></h1></div>
             <div class="sub-header">
               <hr>
               <p>Our vision is simple. We want to create websites and applications with both high quality design and easy-to-access content.</p>
