--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="container">
           <header class="header">
             <div class="fittextjs">  
-              <h1>We code</h1>
+              <h1 class="smile">We code</h1>
               <h1>You smile</h1> 
             </div>     
             <div class="sub-header ">
