--- a/index.html
+++ b/index.html
@@ -83,14 +83,16 @@
 
       <section id="about" class="about section">
         <div class="container">
-          <header class="header">
-            <div class="fittextjs"><h1>Services</h1></div>
-            <div class="sub-header">
-              <hr class="header_hr">
-              <p>Our vision is simple. We want to create websites and applications with both high quality design and easy-to-access content.</p>
-              <p>The finished product will be totally unique and represent awesomeness.</p>
-            </div>
-          </header>
+          <div class="header-wrapper">
+            <header class="header">
+              <div class="fittextjs"><h1>Services</h1></div>
+              <div class="sub-header">
+                <hr class="header_hr">
+                <p>Our vision is simple. We want to create websites and applications with both high quality design and easy-to-access content.</p>
+                <p>The finished product will be totally unique and represent awesomeness.</p>
+              </div>
+            </header>
+          </div>
 
           <div class="content tiles three">
             <div class="tile">
