--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="container">
           <div class="header-wrapper">
             <header class="header">
-              <div class="fittextjs"><h1>Services</h1></div>
+              <h1 class="fittextjs">Services</h1>
               <div class="sub-header">
                 <hr class="header_hr">
                 <p>Our vision is simple. We want to create websites and applications with both high quality design and easy-to-access content.</p>
